--- a/src/routes/Home.css
+++ b/src/routes/Home.css
@@ -5,11 +5,11 @@
 }
 
 .loader {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  transform: translateY(-50%);
   font-weight: 300;
 }
 
@@ -18,11 +18,12 @@
   grid-template-columns: repeat(2, minmax(400px, 1fr));
   grid-gap: 100px;
   padding: 50px;
-  width: 80%;
+  max-width: 1366px;
+  margin: 0 auto;
   padding-top: 70px;
 }
 
-@media screen and (max-width: 1090px) {
+@media screen and (max-width: 1024px) {
   .movies {
     grid-template-columns: 1fr;
     width: 100%;
